--- a/homeautomation/20-influxdb.yaml
+++ b/homeautomation/20-influxdb.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
       - name: influxdb
         image: influxdb
-        #imagePullPolicy: Always
+        imagePullPolicy: Always
         ports:
         - containerPort: 8086
           protocol: TCP
@@ -79,3 +79,48 @@ spec:
   -  services:
      - name: influxdb
        port: 8089
+
+
+
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: influxdb-websecure
+  namespace: homeautomation
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - match: Host(`influxdb.tinker.haus`)
+      kind: Rule
+      services:
+        - name: influxdb
+          port: 8086
+      middlewares:
+        - name: default-ip-whitelist-local@kubernetescrd
+  tls:
+    certResolver: myresolver
+    domains:
+    - main: "tinker.haus"
+      sans:
+      - "*.tinker.haus"
+
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: influxdb-web
+  namespace: homeautomation
+spec:
+  entryPoints:
+    - web
+  routes:
+    - match: Host(`influxdb.tinker.haus`)
+      kind: Rule
+      services:
+        - name: influxdb
+          port: 8086
+      middlewares:
+        - name: default-ip-whitelist-local@kubernetescrd
+        - name: default-redirect-to-https@kubernetescrd
