--- a/homeautomation/90-haas.yaml
+++ b/homeautomation/90-haas.yaml
@@ -15,14 +15,11 @@ spec:
     spec:
       containers:
       - name: homeassistant
-        image: homeassistant/home-assistant:stable
-        #imagePullPolicy: Always
+        image: homeassistant/home-assistant:latest
+        imagePullPolicy: Always
         ports:
         - name: webui
           containerPort: 8123
-        volumeMounts:
-          - name: config
-            mountPath: /config
         env:
           - name: PYTHONPATH
             value: "/config/custom_components"
@@ -34,8 +31,12 @@ spec:
           periodSeconds: 60
           timeoutSeconds: 15
         securityContext:
+          privileged: true
           capabilities:
             add: ["NET_RAW"]
+        volumeMounts:
+          - name: config
+            mountPath: /config
       volumes:
         - name: config
           hostPath:
@@ -56,11 +57,12 @@ spec:
   type: NodePort
   selector:
     app: homeassistant
+
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: homeassistant
+  name: homeassistant-websecure
   namespace: homeautomation
 spec:
   entryPoints:
@@ -79,3 +81,21 @@ spec:
     - main: "tinker.haus"
       sans:
       - "*.tinker.haus"
+
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: homeassistant-web
+  namespace: homeautomation
+spec:
+  entryPoints:
+    - web
+  routes:
+    - match: Host(`haas.tinker.haus`)
+      kind: Rule
+      services:
+        - name: homeassistant
+          port: 80
+      middlewares:
+        - name: default-ip-whitelist-local@kubernetescrd
