[Nextcloud] Update configuration files

--- a/nextcloud/10-app.yaml
+++ b/nextcloud/10-app.yaml
@@ -19,10 +19,8 @@ spec:
     spec:
       containers:
       - name: app
-        image: registry.tinker.haus/tinkernextcloud # nextcloud:fpm
-        #imagePullPolicy: Always
-        command: ["/usr/bin/ionice"]
-        args: ["-c", "2", "-n", "2", "/entrypoint.sh", "php-fpm"]
+        image: registry.tinker.haus/nextcloud
+        imagePullPolicy: Always
         env:
         - name: MYSQL_HOST
           value: db
@@ -45,6 +43,8 @@ spec:
           mountPath: /data
         - name: cache
           mountPath: /cache
+        - name: storage
+          mountPath: /home-storage
       restartPolicy: Always
       volumes:
       - name: nextcloud
@@ -56,6 +56,9 @@ spec:
       - name: data
         hostPath:
           path: "/servers/nextcloud/data"
+      - name: storage
+        hostPath:
+          path: "/home-storage"
 
 ---
 apiVersion: v1
