--- a/nextcloud/50-redis.yaml
+++ b/nextcloud/50-redis.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
       - name: redis
         image: redis
-        #imagePullPolicy: Always
+        imagePullPolicy: Always
         ports:
         - containerPort: 6379
       restartPolicy: Always
