--- a/nextcloud/80-web-frontend.yaml
+++ b/nextcloud/80-web-frontend.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
       - name: web-frontend
         image: nginx
-        #imagePullPolicy: Always
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
         env:
@@ -40,6 +40,7 @@ spec:
       - name: nextcloud
         hostPath:
           path: "/var/srv/nextcloud/html"
+
 ---
 apiVersion: v1
 kind: Service
@@ -54,6 +55,7 @@ spec:
   type: NodePort
   selector:
     app: web-frontend
+
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
@@ -72,6 +74,7 @@ spec:
       middlewares:
         - name: nextcloud-strict-transport-security@kubernetescrd
         - name: nextcloud-nextcloud-redirect@kubernetescrd
+
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
@@ -96,29 +99,3 @@ spec:
     - main: "tinker.haus"
       sans:
       - "*.tinker.haus"
-
-
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
-metadata:
-  name: websecure-frontend-ingressroute-works-auth
-  namespace: nextcloud
-spec:
-  entryPoints:
-    - websecure
-  routes:
-    - match: Host(`nextcloud.tinker.works`)
-      kind: Rule
-      services:
-        - name: web-frontend
-          port: 80
-      middlewares:
-        - name: nextcloud-strict-transport-security@kubernetescrd
-        - name: nextcloud-nextcloud-redirect@kubernetescrd
-  tls:
-    certResolver: myresolver
-    domains:
-    - main: "tinker.works"
-      sans:
-      - "*.tinker.works"
