--- a/traefik/traefik.yaml
+++ b/traefik/traefik.yaml
@@ -26,7 +26,7 @@ spec:
       containers:
       - name: traefik
         image: traefik:latest
-#        #imagePullPolicy: Always
+        imagePullPolicy: Always
         args:
             - --log.level=INFO
             - --pilot.dashboard=false
