--- a/services/50-gitweb.yaml
+++ b/services/50-gitweb.yaml
@@ -16,14 +16,12 @@ spec:
       containers:
       - name: gitweb
         image: fraoustin/gitweb
-        #imagePullPolicy: Always
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
         env:
         - name: CONTAINER_TIMEZONE
           value: "Europe/Bucharest"
-#        - name: IHM
-#          value: "mdl"
         - name: GITUSER
           value: "gituser"
         - name: GITPASSWORD
@@ -36,7 +34,6 @@ spec:
           hostPath:
             path: /git
             type: DirectoryOrCreate
-
 
 ---
 apiVersion: v1
@@ -52,11 +49,12 @@ spec:
   type: NodePort
   selector:
     app: gitweb
+
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: gitweb-ingressroute-auth
+  name: gitweb-websecure
   namespace: services
 spec:
   entryPoints:
@@ -75,3 +73,22 @@ spec:
     - main: "tinker.haus"
       sans:
       - "*.tinker.haus"
+
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: gitweb-web
+  namespace: services
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - match: Host(`gitweb.tinker.haus`)
+      kind: Rule
+      services:
+        - name: gitweb
+          port: 80
+      middlewares:
+        - name: default-ip-whitelist-local@kubernetescrd
+        - name: default-redirect-to-https@kubernetescrd
