--- a/services/50-nut-http.yaml
+++ b/services/50-nut-http.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nut-http
-  namespace: homeautomation
+  namespace: services
 spec:
   selector:
     matchLabels:
@@ -15,28 +15,20 @@ spec:
     spec:
       containers:
       - name: nut-http
-        image: deetoreu/nut-http:latest
-        #imagePullPolicy: Always
+        image: deetoreu/nut-http
+        imagePullPolicy: Always
         ports:
         - containerPort: 3001
-#        volumeMounts:
-#          - name: logs
-#            mountPath: /usr/src/app/logs
         env:
           - name: NUT_ADDRESS
             value: "10.1.1.42"
-#      volumes:
-#        - name: logs
-#          hostPath:
-#            path: /var/srv/homeautomation/nut-http/logs
-#            type: DirectoryOrCreate
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: nut-http
-  namespace: homeautomation
+  namespace: services
 spec:
   ports:
   - port: 3001
@@ -45,3 +37,21 @@ spec:
   type: NodePort
   selector:
     app: nut-http
+
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: nut-http-ingressroute-notls
+  namespace: services
+spec:
+  entryPoints:
+    - web
+  routes:
+    - match: Host(`nut.tinker.haus`)
+      kind: Rule
+      services:
+        - name: nut-http
+          port: 3001
+      middlewares:
+        - name: default-ip-whitelist-local@kubernetescrd
