[HomeAutomation] Fix rhaaspy profile

--- a/homeautomation/95-rhaaspy.yaml
+++ b/homeautomation/95-rhaaspy.yaml
@@ -17,6 +17,7 @@ spec:
       - name: rhasspy
         image: rhasspy/rhasspy
         imagePullPolicy: Always
+        args: ["--profile", "en"]
         ports:
         - name: webui
           containerPort: 12101
