--- a/services/80-registry.yaml
+++ b/services/80-registry.yaml
@@ -26,7 +26,7 @@ spec:
       volumes:
         - name: registry
           hostPath:
-            path: /servers/registry
+            path: /var/srv/services/registry
             type: DirectoryOrCreate
 
 ---
