[Jenkins] Add jenkins permissions for cluster

--- a/jenkins/10-serviceaccounts.yaml
+++ b/jenkins/10-serviceaccounts.yaml
@@ -49,8 +49,14 @@ rules:
 - apiGroups: [""]
   resources: ["pods"]
   verbs: ["list"]
+- apiGroups: [""]
+  resources: ["namespaces"]
+  verbs: ["list"]
 - apiGroups: ["apps"]
   resources: ["deployments"]
+  verbs: ["list","patch"]
+- apiGroups: ["apps"]
+  resources: ["daemonsets"]
   verbs: ["list","patch"]
 
 ---
