--- a/services/50-nut-http.yaml
+++ b/services/50-nut-http.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: nut-http
-        image: deetoreu/nut-http
+        image: docker-cache.tinker.haus/deetoreu/nut-http
         imagePullPolicy: Always
         ports:
         - containerPort: 3001
