--- a/games/valheim_chilled.yaml
+++ b/games/valheim_chilled.yaml
@@ -19,7 +19,7 @@ spec:
       hostNetwork: true
       containers:
       - name: valheim-chilled
-        image: lloesche/valheim-server
+        image: docker-cache.tinker.haus/lloesche/valheim-server
         imagePullPolicy: Always
         ports:
         - containerPort: 22456
