--- a/homeautomation/20-postgresql.yaml
+++ b/homeautomation/20-postgresql.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: postgresql
-        image: postgres
+        image: docker-cache.tinker.haus/library/postgres:latest
         imagePullPolicy: Always
         env:
         - name: POSTGRES_PASSWORD_FILE
