--- a/homeautomation/25-grafana.yaml
+++ b/homeautomation/25-grafana.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: grafana
-        image: monitoringartist/grafana-xxl
+        image: docker-cache.tinker.haus/monitoringartist/grafana-xxl
         imagePullPolicy: Always
         ports:
         - containerPort: 3000
