--- a/homeautomation/30-mosquitto.yaml
+++ b/homeautomation/30-mosquitto.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: mosquitto
-        image: eclipse-mosquitto
+        image: docker-cache.tinker.haus/library/eclipse-mosquitto:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 1883
