--- a/nextcloud/80-web-frontend.yaml
+++ b/nextcloud/80-web-frontend.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: web-frontend
-        image: nginx
+        image: docker-cache.tinker.haus/library/nginx
         imagePullPolicy: Always
         ports:
         - containerPort: 80
