--- a/services/81-registry-cache.yaml
+++ b/services/81-registry-cache.yaml
@@ -1,43 +1,43 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: registry
+  name: docker-cache
   namespace: services
 spec:
   selector:
     matchLabels:
-      app: registry
+      app: docker-cache
   replicas: 1
   template:
     metadata:
       labels:
-        app: registry
+        app: docker-cache
     spec:
       containers:
-      - name: registry
-        image: docker-cache.tinker.haus/library/registry
+      - name: docker-cache
+        image: docker.io/library/registry
         ports:
         - name: main
           containerPort: 5000
         volumeMounts:
-          - name: docker-cache.tinker.haus/library/registry
+          - name: registry
             mountPath: /var/lib/registry
-          - name: registry-config-yml
+          - name: docker-cache-config-yml
             mountPath: "/etc/docker/registry"
             readOnly: true
       volumes:
         - name: registry
           hostPath:
-            path: /var/srv/services/registry
+            path: /var/srv/services/docker-cache
             type: DirectoryOrCreate
-        - name: registry-config-yml
+        - name: docker-cache-config-yml
           configMap:
-            name: registry-config-yml
+            name: docker-cache-config-yml
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: registry-config-yml
+  name: docker-cache-config-yml
   namespace: services
 data:
   config.yml: |-
@@ -61,12 +61,14 @@ data:
        threshold: 3
    delete:
      enabled: true
+   proxy:
+     remoteurl: https://registry-1.docker.io
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: registry
+  name: docker-cache
   namespace: services
 spec:
   ports:
@@ -75,22 +77,22 @@ spec:
     targetPort: 5000
   type: NodePort
   selector:
-    app: registry
+    app: docker-cache
 
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: registry-websecure
+  name: docker-cache-websecure
   namespace: services
 spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`registry.tinker.haus`)
+    - match: Host(`docker-cache.tinker.haus`)
       kind: Rule
       services:
-        - name: registry
+        - name: docker-cache
           port: 80
       middlewares:
         - name: default-ip-whitelist-local@kubernetescrd
@@ -106,16 +108,16 @@ spec:
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: registry-web
+  name: docker-cache-web
   namespace: services
 spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`registry.tinker.haus`)
+    - match: Host(`docker-cache.tinker.haus`)
       kind: Rule
       services:
-        - name: registry
+        - name: docker-cache
           port: 80
       middlewares:
         - name: default-ip-whitelist-local@kubernetescrd
