--- a/services/90-telegraf.yaml
+++ b/services/90-telegraf.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: telegraf
-        image: telegraf
+        image: docker-cache.tinker.haus/library/telegraf
         imagePullPolicy: Always
         args: ["--debug"]
         securityContext:
