--- a/services/90-unifi.yaml
+++ b/services/90-unifi.yaml
@@ -19,7 +19,7 @@ spec:
       hostNetwork: true
       containers:
       - name: unifi
-        image: jacobalberty/unifi
+        image: docker-cache.tinker.haus/jacobalberty/unifi
         imagePullPolicy: Always
         ports:
         - containerPort: 3478  # UDP Port used for STUN.
