--- a/services/99-fuse.yaml
+++ b/services/99-fuse.yaml
@@ -14,7 +14,7 @@ spec:
    spec:
      hostNetwork: true
      containers:
-     - image: soolaugust/fuse-device-plugin:v1.0
+     - image: docker-cache.tinker.haus/soolaugust/fuse-device-plugin:v1.0
        name: fuse-device-plugin-ctr
        securityContext:
          allowPrivilegeEscalation: false
