--- a/homeautomation/95-rhaaspy.yaml
+++ b/homeautomation/95-rhaaspy.yaml
@@ -60,35 +60,12 @@ spec:
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: rhasspy-websecure
-  namespace: homeautomation
-spec:
-  entryPoints:
-    - websecure
-  routes:
-    - match: Host(`rhasspy.tinker.haus`)
-      kind: Rule
-      services:
-        - name: rhasspy
-          port: 80
-      middlewares:
-        - name: default-ip-whitelist-local@kubernetescrd
-  tls:
-    certResolver: myresolver
-    domains:
-    - main: "tinker.haus"
-      sans:
-      - "*.tinker.haus"
-
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
-metadata:
-  name: rhasspy-web
+  name: rhasspy
   namespace: homeautomation
 spec:
   entryPoints:
     - web
+    - websecure
   routes:
     - match: Host(`rhasspy.tinker.haus`)
       kind: Rule
