--- a/homeautomation/20-influxdb.yaml
+++ b/homeautomation/20-influxdb.yaml
@@ -87,35 +87,12 @@ spec:
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: influxdb-websecure
-  namespace: homeautomation
-spec:
-  entryPoints:
-    - websecure
-  routes:
-    - match: Host(`influxdb.tinker.haus`)
-      kind: Rule
-      services:
-        - name: influxdb
-          port: 8086
-      middlewares:
-        - name: default-ip-whitelist-local@kubernetescrd
-  tls:
-    certResolver: myresolver
-    domains:
-    - main: "tinker.haus"
-      sans:
-      - "*.tinker.haus"
-
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
-metadata:
-  name: influxdb-web
+  name: influxdb
   namespace: homeautomation
 spec:
   entryPoints:
     - web
+    - websecure
   routes:
     - match: Host(`influxdb.tinker.haus`)
       kind: Rule
