--- a/homeautomation/25-grafana.yaml
+++ b/homeautomation/25-grafana.yaml
@@ -55,6 +55,7 @@ metadata:
   namespace: homeautomation
 spec:
   entryPoints:
+    - web
     - websecure
   routes:
     - match: Host(`grafana.tinker.haus`)
@@ -64,9 +65,3 @@ spec:
           port: 80
       middlewares:
         - name: default-ip-whitelist-local@kubernetescrd
-  tls:
-    certResolver: myresolver
-    domains:
-    - main: "tinker.haus"
-      sans:
-      - "*.tinker.haus"
