--- a/homeautomation/90-haas.yaml
+++ b/homeautomation/90-haas.yaml
@@ -58,39 +58,17 @@ spec:
   selector:
     app: homeassistant
 
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
-metadata:
-  name: homeassistant-websecure
-  namespace: homeautomation
-spec:
-  entryPoints:
-    - websecure
-  routes:
-    - match: Host(`haas.tinker.haus`)
-      kind: Rule
-      services:
-        - name: homeassistant
-          port: 80
-      middlewares:
-        - name: default-ip-whitelist-local@kubernetescrd
-  tls:
-    certResolver: myresolver
-    domains:
-    - main: "tinker.haus"
-      sans:
-      - "*.tinker.haus"
 
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: homeassistant-web
+  name: homeassistant
   namespace: homeautomation
 spec:
   entryPoints:
     - web
+    - websecure
   routes:
     - match: Host(`haas.tinker.haus`)
       kind: Rule
