--- a/homeautomation/99-almond.yaml
+++ b/homeautomation/99-almond.yaml
@@ -51,6 +51,7 @@ metadata:
   namespace: homeautomation
 spec:
   entryPoints:
+    - web
     - websecure
   routes:
     - match: Host(`almond.tinker.haus`)
@@ -60,9 +61,3 @@ spec:
           port: 80
       middlewares:
         - name: default-ip-whitelist-local@kubernetescrd
-  tls:
-    certResolver: myresolver
-    domains:
-    - main: "tinker.haus"
-      sans:
-      - "*.tinker.haus"
