--- a/services/80-registry.yaml
+++ b/services/80-registry.yaml
@@ -81,35 +81,11 @@ spec:
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: registry-websecure
+  name: registry
   namespace: services
 spec:
   entryPoints:
-    - websecure
-  routes:
-    - match: Host(`registry.tinker.haus`)
-      kind: Rule
-      services:
-        - name: registry
-          port: 80
-      middlewares:
-        - name: default-ip-whitelist-local@kubernetescrd
-  tls:
-    certResolver: myresolver
-    domains:
-    - main: "tinker.haus"
-      sans:
-      - "*.tinker.haus"
-
-
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
-metadata:
-  name: registry-web
-  namespace: services
-spec:
-  entryPoints:
+    - web
     - websecure
   routes:
     - match: Host(`registry.tinker.haus`)
