--- a/services/80-registry.yaml
+++ b/services/80-registry.yaml
@@ -20,7 +20,7 @@ spec:
         - name: main
           containerPort: 5000
         volumeMounts:
-          - name: docker-cache.tinker.haus/library/registry
+          - name: registry
             mountPath: /var/lib/registry
           - name: registry-config-yml
             mountPath: "/etc/docker/registry"
