Raise cluster priority to the registry pods

--- a/services/80-registry.yaml
+++ b/services/80-registry.yaml
@@ -13,6 +13,7 @@ spec:
       labels:
         app: registry
     spec:
+      priorityClassName: system-cluster-critical
       containers:
       - name: registry
         image: docker-cache.tinker.haus/library/registry
