--- a/services/81-registry-cache.yaml
+++ b/services/81-registry-cache.yaml
@@ -13,6 +13,7 @@ spec:
       labels:
         app: docker-cache
     spec:
+      priorityClassName: system-cluster-critical
       containers:
       - name: docker-cache
         image: docker.io/library/registry
