--- a/traefik/10-traefik.yaml
+++ b/traefik/10-traefik.yaml
@@ -26,6 +26,7 @@ spec:
       containers:
       - name: traefik
         image: library/traefik:latest
+        imagePullPolicy: Always
         args:
             - --log.level=INFO
             - --pilot.dashboard=false
