--- a/traefik/10-traefik.yaml
+++ b/traefik/10-traefik.yaml
@@ -23,6 +23,7 @@ spec:
     spec:
       serviceAccountName: traefik-ingress-controller
       hostNetwork: true
+      priorityClassName: system-node-critical
       containers:
       - name: traefik
         image: library/traefik:latest
@@ -30,7 +31,8 @@ spec:
         args:
             - --log.level=INFO
             - --pilot.dashboard=false
-            - --api.dashboard
+            - --api.dashboard=true
+            - --api.insecure=true
             - --accesslog
             - --metrics=true
             - --metrics.influxdb=true
@@ -96,7 +98,7 @@ spec:
 
 ---
 # dashboard.yaml
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: dashboard
@@ -114,3 +116,12 @@ spec:
       middlewares:
         - name: default-ip-whitelist-local@kubernetescrd
         - name: default-redirect-to-https@kubernetescrd
+
+---
+apiVersion: scheduling.k8s.io/v1
+kind: PriorityClass
+metadata:
+  name: high-priority-traefik
+value: 1000000
+globalDefault: false
+description: "This priority class should be used for traefik"
