--- a/traefik/kubernetes-crd-rbac.yml
+++ b/traefik/kubernetes-crd-rbac.yml
@@ -32,6 +32,7 @@ rules:
     verbs:
       - update
   - apiGroups:
+      - traefik.io
       - traefik.containo.us
     resources:
       - middlewares
