--- a/homeautomation/20-influxdb.yaml
+++ b/homeautomation/20-influxdb.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
       - name: influxdb
         image: docker-cache.tinker.haus/library/influxdb:latest
-        imagePullPolicy: Always
+        #imagePullPolicy: Always
         ports:
         - containerPort: 8086
           protocol: TCP
@@ -52,7 +52,7 @@ spec:
     app: influxdb
 
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRouteTCP
 metadata:
   name: influxdb
@@ -65,10 +65,9 @@ spec:
     services:
     - name: influxdb
       port: 8086
-      terminationDelay: 4000
 
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRouteUDP
 metadata:
   name: ingressrouteudpinfluxdb
@@ -84,7 +83,7 @@ spec:
 
 
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: influxdb
