--- a/homeautomation/25-grafana.yaml
+++ b/homeautomation/25-grafana.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
       - name: grafana
         image: docker-cache.tinker.haus/monitoringartist/grafana-xxl
-        imagePullPolicy: Always
+        #imagePullPolicy: Always
         ports:
         - containerPort: 3000
         volumeMounts:
@@ -48,7 +48,7 @@ spec:
   selector:
     app: grafana
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: grafana
