--- a/homeautomation/30-mosquitto.yaml
+++ b/homeautomation/30-mosquitto.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
       - name: mosquitto
         image: docker-cache.tinker.haus/library/eclipse-mosquitto:latest
-        imagePullPolicy: Always
+        #imagePullPolicy: Always
         ports:
         - containerPort: 1883
           hostPort: 1883
