--- a/homeautomation/40-zigbee2mqtt.yaml
+++ b/homeautomation/40-zigbee2mqtt.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
       - name: zigbee2mqtt
         image: docker-cache.tinker.haus/koenkk/zigbee2mqtt
-        imagePullPolicy: Always
+        #imagePullPolicy: Always
         ports:
         - name: webui
           containerPort: 8123
@@ -57,7 +57,7 @@ spec:
     app: zigbee2mqtt
 
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: zigbee2mqtt
