--- a/homeautomation/90-haas.yaml
+++ b/homeautomation/90-haas.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
       - name: homeassistant
         image: registry.tinker.haus/homeassistant:latest # docker-cache.tinker.haus/homeassistant/home-assistant:latest
-        imagePullPolicy: Always
+        #imagePullPolicy: Always
         ports:
         - name: webui
           containerPort: 8123
@@ -60,7 +60,7 @@ spec:
 
 
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: homeassistant
