--- a/homeautomation/90-openhab.yaml
+++ b/homeautomation/90-openhab.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
       - name: openhab
         image: docker-cache.tinker.haus/openhab/openhab:milestone
-        imagePullPolicy: Always
+        #imagePullPolicy: Always
         ports:
         - containerPort: 28080
         volumeMounts:
@@ -61,7 +61,7 @@ spec:
     app: openhab
 
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: openhab
