--- a/nextcloud/80-web-frontend.yaml
+++ b/nextcloud/80-web-frontend.yaml
@@ -57,7 +57,7 @@ spec:
     app: web-frontend
 
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: nextcloud-web-frontend
@@ -77,7 +77,7 @@ spec:
         - name: nextcloud-nextcloud-redirect@kubernetescrd
 
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: nextcloud-redirect
@@ -88,7 +88,7 @@ spec:
     replacement: /remote.php/dav/
 
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: strict-transport-security
