--- a/services/50-gitweb.yaml
+++ b/services/50-gitweb.yaml
@@ -51,7 +51,7 @@ spec:
     app: gitweb
 
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: gitweb
