--- a/services/50-nut-http.yaml
+++ b/services/50-nut-http.yaml
@@ -39,7 +39,7 @@ spec:
     app: nut-http
 
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: nut-http-ingressroute-notls
