--- a/services/80-registry.yaml
+++ b/services/80-registry.yaml
@@ -79,7 +79,7 @@ spec:
     app: registry
 
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: registry
