--- a/services/80-tasmota.yaml
+++ b/services/80-tasmota.yaml
@@ -46,7 +46,7 @@ spec:
     app: tasmota
 
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: tasmota-ingressroute-auth
