--- a/services/81-registry-cache.yaml
+++ b/services/81-registry-cache.yaml
@@ -81,7 +81,7 @@ spec:
     app: docker-cache
 
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: docker-cache
@@ -98,3 +98,12 @@ spec:
           port: 80
       middlewares:
         - name: default-ip-whitelist-local@kubernetescrd
+
+---
+apiVersion: scheduling.k8s.io/v1
+kind: PriorityClass
+metadata:
+  name: high-priority-registry
+value: 900000
+globalDefault: false
+description: "This priority class should be used for XYZ service pods only."
